--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@ body {
 <body>
 <h1 id="data" style="text-align: center;margin-top: 35px;">I <a href="https://data.techforpalestine.org/docs/killed-in-gaza/" style="color: #E4312B;">DATI</a> IN QUESTO SITO SONO AGGIORNATI IN TEMPO REALE</h1>
 
-<h1 style="text-align: center;font-size: 100px;">Sono:</h1>
-
+<h1 style="text-align: center;font-size: 80px;">Sono:</h1>
 
 <h1 id="count2" style="text-align: center;font-size: 100px;"></h1>
 
@@ -79,7 +78,7 @@ function elaborate(x){
         var par = document.createElement("p");
 
         if ( compagnu.sex == "m" && compagnu.age < 23){
-            var text = document.createTextNode(compagnu.name + " " + compagnu.en_name +"\nnera un ragazzo di " + compagnu.age + " anni" );
+            var text = document.createTextNode(compagnu.name + " " + compagnu.en_name +"\nera un ragazzo di " + compagnu.age + " anni" );
         }
 
         if ( compagnu.sex == "f" && compagnu.age < 23){
