--- a/index.html
+++ b/index.html
@@ -22,6 +22,78 @@ body {
     background-color: #149954;
     font-family: monospace;
 }
+
+button {
+  
+  display: block;
+  cursor: pointer;
+  outline: none;
+  border: 0;
+  
+  text-decoration: none;
+  font-size: 1.5rem;
+  color: black;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-family: inherit;
+  margin: auto;
+}
+
+button.big-button {
+  padding: 1em 2em;
+  border: 2px solid #E4312B;
+  color: white;
+  border-radius: 1em;
+  background:black;
+  transform-style: preserve-3d;
+  transition: all 175ms cubic-bezier(0, 0, 1, 1);
+
+}
+button.big-button::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #E4312B;
+  border-radius: inherit;
+  box-shadow: 0 0 0 2px black, 0 0.75em 0 0 black;
+  transform: translate3d(0, 0.75em, -1em);
+  transition: all 175ms cubic-bezier(0, 0, 1, 1);
+}
+
+button.big-button:hover {
+  background: black;
+  color: white;
+  border: 2px solid white;
+  box-shadow: 0 0 0 2px white, 0 0.75em 0 0 white;
+  
+  transform: translate(0, 0.375em);
+}
+
+button.big-button:hover::before {
+  transform: translate3d(0, 0.75em, -1em);
+  
+}
+
+button.big-button:active {
+  transform: translate(0em, 0.75em);
+  background: green;
+  color: black;
+  
+  
+}
+
+button.big-button:active::before {
+  transform: translate3d(0, 0, -1em);
+
+  box-shadow: 0 0 0 2px #E4312B, 0 0.25em 0 0 #149954;
+}
+
+
 </style>
 <head>
 </head>
@@ -42,7 +114,10 @@ body {
 <div>
 <p id="tribute" style="text-align: center;font-size: 35px;"></p>
 
-<div id="nomi"></div>
+
+<button class="big-button" onclick="show()">Mostra</button>
+
+<div id="nomi" style="margin-bottom: 20%;margin-top: 10%;"></div>
 </div>
 
 <div class="footer">
@@ -50,8 +125,31 @@ body {
     <img class="img-center2" src="footer.gif" alt="flag gif"> 
 </div>
 
+
 <script>
-    let url = 'https://data.techforpalestine.org/api/v2/killed-in-gaza.min.json';
+
+let url = 'https://data.techforpalestine.org/api/v3/summary.min.json';
+
+fetch(url)
+.then(res => res.json())
+.then(out =>
+  elaborate2(out))
+.catch(err => { throw err });
+
+
+
+url = 'https://data.techforpalestine.org/api/v2/killed-in-gaza.min.json';
+fetch(url)
+.then(res => res.json())
+.then(out => document.getElementById("tribute").innerHTML = "Sono <span style='color:#E4312B;'>" + out.length + "</span> i nomi registrati delle persone mancate"
+ )
+.catch(err => { throw err });
+
+
+
+ url = 'https://data.techforpalestine.org/api/v2/killed-in-gaza.min.json';
+
+function show(){
 
 fetch(url)
 .then(res => res.json())
@@ -59,13 +157,7 @@ fetch(url)
   elaborate(out))
 .catch(err => { throw err });
 
-url = 'https://data.techforpalestine.org/api/v3/summary.min.json';
-
-fetch(url)
-.then(res => res.json())
-.then(out =>
-  elaborate2(out))
-.catch(err => { throw err });
+}
 
 
 function elaborate(x){
