--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ button.big-button:active::before {
 </head>
 <title>INFO 🇵🇸</title>
 <body>
-<h1 id="data" style="text-align: center;margin-top: 35px;">I <a href="https://data.techforpalestine.org/docs/killed-in-gaza/" style="color: #E4312B;">DATI</a> IN QUESTO SITO SONO AGGIORNATI IN TEMPO REALE</h1>
+<h1 id="data" style="text-align: center;margin-top: 35px;">I <a href="https://data.techforpalestine.org/docs/killed-in-gaza/" style="color: #E4312B;  text-shadow: 1px 1px black;">DATI</a> IN QUESTO SITO SONO AGGIORNATI IN TEMPO REALE</h1>
 
 <h1 style="text-align: center;font-size: 80px;">Sono:</h1>
 
@@ -141,7 +141,7 @@ fetch(url)
 url = 'https://data.techforpalestine.org/api/v2/killed-in-gaza.min.json';
 fetch(url)
 .then(res => res.json())
-.then(out => document.getElementById("tribute").innerHTML = "Sono <span style='color:#E4312B;'>" + out.length + "</span> i nomi registrati delle persone mancate"
+.then(out => document.getElementById("tribute").innerHTML = "Sono <span style='color:#E4312B;  text-shadow: 3.2px 3.2px black;'>" + out.length + "</span> i nomi registrati delle persone mancate"
  )
 .catch(err => { throw err });
 
@@ -188,7 +188,7 @@ function elaborate(x){
         }
 
         par.appendChild(text);
-        par.style = "color:white;text-align: center;font-size: 38px;margin-left:25%;margin-right:25%;border-top: 2px dotted black;padding-top: 100px;padding-bottom: 100px;white-space: pre-line;";
+        par.style = "color:white;text-align: center;font-size: 38px;margin-left:25%;margin-right:25%;border-top: 2px dotted black;padding-top: 100px;padding-bottom: 100px;white-space: pre-line;  text-shadow: 3.2px 3.2px black;";
         cont.appendChild(par);
     });   
     return;
@@ -196,11 +196,11 @@ function elaborate(x){
 
 function elaborate2(x){
 
-    document.getElementById("data").innerHTML = "I <a href='https://data.techforpalestine.org/docs/killed-in-gaza/' style='color: #E4312B;'' target='_blank'>DATI</a> IN QUESTO SITO SONO AGGIORNATI AL " + x.gaza.last_update;
-    document.getElementById("count").innerHTML = " <span style='color:#E4312B;'>" + (parseInt(x.gaza.killed.total) + parseInt(x.west_bank.killed.total))  + "</span> i morti";
-    document.getElementById("count2").innerHTML = "<span style='color:#E4312B;'>" + (parseInt(x.gaza.injured.total) + parseInt(x.west_bank.injured.total))  + "</span> i feriti";
-    document.getElementById("bimbi").innerHTML = "<span style='color:#E4312B;'>" + (parseInt(x.gaza.killed.children) + parseInt(x.west_bank.killed.children)) + "</span> SONO BAMBINI";
-    document.getElementById("donne").innerHTML = "<span style='color:#E4312B;'>" + x.gaza.killed.women+ "</span> SONO DONNE";
+    document.getElementById("data").innerHTML = "I <a href='https://data.techforpalestine.org/docs/killed-in-gaza/' style='color: #E4312B;  text-shadow: 1px 1px black;'' target='_blank'>DATI</a> IN QUESTO SITO SONO AGGIORNATI AL " + x.gaza.last_update;
+    document.getElementById("count").innerHTML = " <span style='color:#E4312B;  text-shadow: 3.2px 3.2px black;'>" + (parseInt(x.gaza.killed.total) + parseInt(x.west_bank.killed.total))  + "</span> i morti";
+    document.getElementById("count2").innerHTML = "<span style='color:#E4312B;  text-shadow: 3.2px 3.2px black;'>" + (parseInt(x.gaza.injured.total) + parseInt(x.west_bank.injured.total))  + "</span> i feriti";
+    document.getElementById("bimbi").innerHTML = "<span style='color:#E4312B;  text-shadow: 3.2px 3.2px black;'>" + (parseInt(x.gaza.killed.children) + parseInt(x.west_bank.killed.children)) + "</span> SONO BAMBINI";
+    document.getElementById("donne").innerHTML = "<span style='color:#E4312B;  text-shadow: 3.2px 3.2px black;'>" + x.gaza.killed.women+ "</span> SONO DONNE";
     
     
     return;
