--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ button.big-button:active::before {
 }
 
 #toggle1:checked ~ .menu1 {
-  height: 350px;
+  height: 250px;
 }
 
 
@@ -201,7 +201,7 @@ button.big-button:active::before {
   transition: all 0.3s ease;
 }
 
-
+    
 </style>
 <head>
 </head>
@@ -219,8 +219,9 @@ button.big-button:active::before {
     
       <nav class="menu1">
         <a class="link1" href="./journalist.html">Journalists</a>
-        <a class="link1" href="./articles.html">Articles</a>
-        <p> <a href="t.me/acampadamilano" style="text-decoration: none;" target="_blank"> <img src="./telegram.png" alt="" style="width: 45px;height:45px;"> </a>  <a href="https://www.instagram.com/acampada.cittastudi/" style="text-decoration: none;" target="_blank"> <img src="./insta.png" alt="" style="width: 45px;height:45px;"></a></p>
+        <!-- Work in progress -->
+        <!--        <a class="link1" href="./articles.html">Articles</a> -->
+        <p> <a href="https://t.me/acampadamilano" style="text-decoration: none;" target="_blank"> <img src="./telegram.png" alt="" style="width: 45px;height:45px;"> </a>  <a href="https://www.instagram.com/acampada.cittastudi/" style="text-decoration: none;" target="_blank"> <img src="./insta.png" alt="" style="width: 45px;height:45px;"></a></p>
       </nav>
   </nav>
   </section>
