--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ button.big-button:active::before {
   margin-left: 20%;
   margin-right: 20%;
 
-  background-image: url("./kefia.png");
+  background-image: url("images/kefia.png");
   background-size:cover;
   background-position-y: center;
   background-blend-mode:soft-light;
@@ -201,11 +201,12 @@ button.big-button:active::before {
   transition: all 0.3s ease;
 }
 
-    
+
 </style>
 <head>
 </head>
 <title>INFO 🇵🇸</title>
+<link rel="icon" type="image/x-icon" href="/images/logo.ico">
 <body>
 
   <section class="p-menu1">
@@ -221,7 +222,7 @@ button.big-button:active::before {
         <a class="link1" href="./journalist.html">Journalists</a>
         <!-- Work in progress -->
         <!--        <a class="link1" href="./articles.html">Articles</a> -->
-        <p> <a href="https://t.me/acampadamilano" style="text-decoration: none;" target="_blank"> <img src="./telegram.png" alt="" style="width: 45px;height:45px;"> </a>  <a href="https://www.instagram.com/acampada.cittastudi/" style="text-decoration: none;" target="_blank"> <img src="./insta.png" alt="" style="width: 45px;height:45px;"></a></p>
+        <p> <a href="https://t.me/acampadamilano" style="text-decoration: none;" target="_blank"> <img src="images/telegram.png" alt="" style="width: 45px;height:45px;"> </a>  <a href="https://www.instagram.com/acampada.cittastudi/" style="text-decoration: none;" target="_blank"> <img src="images/insta.png" alt="" style="width: 45px;height:45px;"></a></p>
       </nav>
   </nav>
   </section>
@@ -255,8 +256,8 @@ button.big-button:active::before {
 </div>
 
 <div class="footer">
-    <img class="img-center" src="footer.gif" alt="flag gif"> 
-    <img class="img-center2" src="footer.gif" alt="flag gif"> 
+    <img class="img-center" src="images/footer.gif" alt="flag gif"> 
+    <img class="img-center2" src="images/footer.gif" alt="flag gif"> 
 </div>
 
 
@@ -335,7 +336,7 @@ function elaborate(x){
         par.style = "color:white;text-align: center;font-size: 38px;margin-left:25%;margin-right:25%;padding-top: 50px;padding-bottom: 50px;white-space: pre-line;  text-shadow: 3.2px 3.2px black;";
 
         var img = document.createElement("img");
-        img.src = "./separatore.png";
+        img.src = "images/separatore.png";
         img.style = "display: block;margin: auto;";
         cont.appendChild(img);
         cont.appendChild(par);
